feat/add anime banners e quote components

--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "@hookform/resolvers": "^2.9.10",
     "@next/font": "13.1.1",
+    "@radix-ui/react-aspect-ratio": "^1.0.1",
     "@radix-ui/react-avatar": "^1.0.1",
+    "@radix-ui/react-label": "^2.0.0",
     "@radix-ui/react-select": "^1.1.2",
     "@stitches/react": "^1.2.8",
     "@types/node": "18.11.18",
@@ -41,8 +43,8 @@
     "@typescript-eslint/eslint-plugin": "^5.48.0",
     "@typescript-eslint/parser": "^5.48.0",
     "eslint": "8.31.0",
-    "eslint-config-next": "13.1.1",
     "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-next": "13.1.1",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.6.1",
