--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
     "@radix-ui/react-label": "^2.0.0",
     "@radix-ui/react-select": "^1.1.2",
     "@stitches/react": "^1.2.8",
+    "@tanstack/react-query": "^4.20.9",
+    "@tanstack/react-query-devtools": "^4.20.9",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
     "@vercel/analytics": "^0.1.6",
+    "axios": "^1.2.2",
     "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -53,6 +56,10 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-simple-import-sort": "^8.0.0",
     "husky": "^8.0.3",
-    "lint-staged": "^13.1.0"
+    "lint-staged": "^13.1.0",
+    "msw": "^0.49.2"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
