--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react-icons": "^4.7.1",
     "react-use": "^17.4.0",
     "typescript": "4.9.4",
-    "zod": "^3.20.2"
+    "zod": "^3.20.2",
+    "zustand": "^4.2.0"
   },
   "lint-staged": {
     "*.{ts,tsx}": [
