--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -56,6 +56,7 @@
     "no-undef": "off",
     "global-require": "off",
     "react/no-danger": "off",
-    "class-methods-use-this": "off"
+    "class-methods-use-this": "off",
+    "no-restricted-exports": "off"
   }
 }
