--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -2,27 +2,33 @@
   "name": "@whatanime/docs",
   "version": "0.0.0",
   "private": true,
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "dev": "next dev --port 6006",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "dev": "start-storybook -p 6006",
+    "build": "build-storybook"
+  },
+  "keywords": [],
+  "author": "diogo.rocha",
+  "devDependencies": {
+    "@babel/core": "^7.20.12",
+    "@storybook/addon-actions": "^6.5.15",
+    "@storybook/addon-essentials": "^6.5.15",
+    "@storybook/addon-interactions": "^6.5.15",
+    "@storybook/addon-links": "^6.5.15",
+    "@storybook/builder-vite": "^0.2.7",
+    "@storybook/react": "^6.5.15",
+    "@storybook/testing-library": "^0.0.13",
+    "@vitejs/plugin-react": "^3.0.1",
+    "babel-loader": "^8.3.0",
+    "vite": "^3.2.5",
+    "@whatanime/eslint-config-custom": "*",
+    "@whatanime/tsconfig": "*"
   },
   "dependencies": {
-    "next": "13.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "@whatanime/design-system": "*",
     "@whatanime/design-tokens": "*"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.0.0",
-    "eslint": "7.32.0",
-    "@whatanime/eslint-config-custom": "*",
-    "@whatanime/tsconfig": "*",
-    "@types/node": "^17.0.12",
-    "@types/react": "^18.0.22",
-    "@types/react-dom": "^18.0.7",
-    "typescript": "^4.5.3"
   }
 }
