--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -3,15 +3,14 @@
   "version": "0.0.0",
   "private": true,
   "description": "",
-  "main": "index.js",
   "scripts": {
     "dev": "start-storybook -p 6006",
     "build": "build-storybook"
   },
-  "keywords": [],
   "author": "diogo.rocha",
   "devDependencies": {
     "@babel/core": "^7.20.12",
+    "@storybook/addon-a11y": "^6.5.15",
     "@storybook/addon-actions": "^6.5.15",
     "@storybook/addon-essentials": "^6.5.15",
     "@storybook/addon-interactions": "^6.5.15",
@@ -20,15 +19,15 @@
     "@storybook/react": "^6.5.15",
     "@storybook/testing-library": "^0.0.13",
     "@vitejs/plugin-react": "^3.0.1",
-    "babel-loader": "^8.3.0",
-    "vite": "^3.2.5",
     "@whatanime/eslint-config-custom": "*",
-    "@whatanime/tsconfig": "*"
+    "@whatanime/tsconfig": "*",
+    "babel-loader": "^8.3.0",
+    "vite": "^3.2.5"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "@whatanime/design-system": "*",
-    "@whatanime/design-tokens": "*"
+    "@whatanime/design-tokens": "*",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
