--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "lint": "eslint src/**/*.{ts,tsx} --max-warnings=0 --fix",
     "analyzer": "ANALYZE=true next build"
   },
   "dependencies": {
@@ -34,7 +35,7 @@
     "@axe-core/react": "^4.5.2",
     "@babel/core": "^7.0.0",
     "@next/bundle-analyzer": "^13.1.1",
-    "eslint": "7.32.0",
+    "eslint": "8.31.0",
     "@whatanime/eslint-config-custom": "*",
     "@whatanime/tsconfig": "*",
     "@types/node": "^17.0.12",
