--- a/package.json
+++ b/package.json
@@ -10,16 +10,14 @@
     "build": "turbo run build",
     "dev": "turbo run dev --parallel",
     "lint": "turbo run lint",
-    "format": "prettier --write \"**/*.{ts,tsx,md,mdx}\""
+    "format": "prettier --write \"**/*.{ts,tsx}\""
   },
   "devDependencies": {
-    "@whatanime/eslint-config-custom": "*",
     "prettier": "latest",
     "turbo": "latest"
   },
   "engines": {
     "node": "16.x"
   },
-  "dependencies": {},
   "packageManager": "npm@8.19.2"
 }
