--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -5,7 +5,7 @@
   "types": "./src/index.ts",
   "license": "MIT",
   "scripts": {
-    "lint": "TIMING=1 eslint \"**/*.ts*\"",
+    "lint": "eslint src/**/*.{ts,tsx} --max-warnings=0 --fix",
     "build": "tsup src/index.ts --format esm,cjs --dts --external react",
     "dev": "tsup src/index.ts --format esm,cjs --dts --external react --watch"
   },
@@ -15,7 +15,7 @@
     "@whatanime/design-tokens": "*",
     "@whatanime/eslint-config-custom": "*",
     "@whatanime/tsconfig": "*",
-    "eslint": "^7.32.0",
+    "eslint": "8.31.0",
     "react": "^18.2.0",
     "tsup": "^6.5.0",
     "typescript": "^4.5.2"
