--- a/packages/design-tokens/package.json
+++ b/packages/design-tokens/package.json
@@ -5,14 +5,14 @@
   "types": "./src/index.ts",
   "license": "MIT",
   "scripts": {
-    "lint": "TIMING=1 eslint \"**/*.ts*\"",
+    "lint": "eslint src/**/*.{ts,tsx} --max-warnings=0 --fix",
     "build": "tsup src/index.ts --format esm,cjs --dts",
     "dev": "tsup src/index.ts --format esm,cjs --dts --watch"
   },
   "devDependencies": {
     "@whatanime/eslint-config-custom": "*",
     "@whatanime/tsconfig": "*",
-    "eslint": "^7.32.0",
+    "eslint": "8.31.0",
     "tsup": "^6.5.0",
     "typescript": "^4.5.2"
   }
