--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "format": "prettier --write \"**/*.{ts,tsx}\""
   },
   "devDependencies": {
-    "prettier": "latest",
-    "turbo": "latest"
+    "prettier": "^2.8.2",
+    "turbo": "^1.6.3"
   },
   "engines": {
     "node": "16.x"
