--- a/packages/eslint-config-custom/package.json
+++ b/packages/eslint-config-custom/package.json
@@ -16,7 +16,7 @@
     "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-simple-import-sort": "^8.0.0",
-    "eslint-config-turbo": "latest",
+    "eslint-config-turbo": "^0.0.7",
     "typescript": "^4.7.4"
   },
   "publishConfig": {
