refactor/header component

--- a/packages/design-system/tsconfig.json
+++ b/packages/design-system/tsconfig.json
@@ -1,5 +1,5 @@
 {
   "extends": "@whatanime/tsconfig/react-library.json",
-  "include": ["."],
+  "include": [".", "../../apps/web/src/components/Header"],
   "exclude": ["dist", "build", "node_modules"]
 }
