--- a/turbo.json
+++ b/turbo.json
@@ -3,7 +3,7 @@
   "pipeline": {
     "build": {
       "dependsOn": ["^build"],
-      "env": ["NEXT_PUBLIC_API_MOCKING", "NODE_ENV"],
+      "env": ["NEXT_PUBLIC_API_MOCKING", "NODE_ENV", "ANALYZE"],
       "outputs": ["dist/**", ".next/**"]
     },
     "lint": {
