--- a/.github/workflows/check-application.yml
+++ b/.github/workflows/check-application.yml
@@ -20,4 +20,11 @@ jobs:
           cache: 'npm'
           cache-dependency-path: '**/package-lock.json'  
 
-      - run: npm run lint 
+      - name: Eslint Scan
+        run: npm run lint 
+
+      - name: SonarCloud Scan
+        uses: SonarSource/sonarcloud-github-action@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
