--- a/.github/workflows/check-application.yml
+++ b/.github/workflows/check-application.yml
@@ -19,6 +19,9 @@ jobs:
           node-version: 16.18.1
           cache: 'npm'
           cache-dependency-path: '**/package-lock.json'  
+ 
+      - name: Install dependencies
+        run: npm ci  
 
       - name: Eslint Scan
         run: npm run lint 
