--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,7 +22,8 @@ jobs:
           cache: 'npm'
           cache-dependency-path: '**/package-lock.json'  
 
-      - run: npm ci  
+      - name: Install dependencies
+        run: npm ci  
 
       - name: Publish to npm
         id: changesets
