--- a/.github/workflows/check-application.yml
+++ b/.github/workflows/check-application.yml
@@ -1,7 +1,7 @@
 name: CI Workflow
 
 on: 
-  push:
+  pull_request:
     branches:
       - dev
       - hlg
@@ -19,15 +19,5 @@ jobs:
           node-version: 16.18.1
           cache: 'npm'
           cache-dependency-path: '**/package-lock.json'  
- 
-      - name: Install dependencies
-        run: npm ci  
 
-      - name: Eslint Scan
-        run: npm run lint 
-
-      - name: SonarCloud Scan
-        uses: SonarSource/sonarcloud-github-action@master
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      - run: npm run lint 
