feat/add next/fonts

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^2.9.10",
+    "@next/font": "^13.1.2",
     "@tanstack/react-query": "^4.20.9",
     "@tanstack/react-query-devtools": "^4.20.9",
     "@types/node": "18.11.18",
@@ -34,14 +35,14 @@
     "@axe-core/react": "^4.5.2",
     "@babel/core": "^7.0.0",
     "@next/bundle-analyzer": "^13.1.1",
-    "eslint": "8.31.0",
-    "@whatanime/eslint-config-custom": "*",
-    "@whatanime/tsconfig": "*",
     "@types/node": "^17.0.12",
     "@types/react": "^18.0.22",
     "@types/react-dom": "^18.0.7",
-    "typescript": "^4.5.3",
-    "msw": "^0.49.2"
+    "@whatanime/eslint-config-custom": "*",
+    "@whatanime/tsconfig": "*",
+    "eslint": "8.31.0",
+    "msw": "^0.49.2",
+    "typescript": "^4.5.3"
   },
   "msw": {
     "workerDirectory": "public"
