--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint src/**/*.{ts,tsx} --max-warnings=0 --fix",
-    "analyzer": "ANALYZE=true next build"
+    "analyzer": "ANALYZE=true next build",
+    "postinstall": "npx prisma generate"
   },
   "dependencies": {
     "@hookform/resolvers": "^2.9.10",
